Update Test Swagger
